syntax = "proto3";

package datifyy.admin.v1;

option go_package = "github.com/datifyy/backend/gen/admin/v1";

import "common/v1/types.proto";
import "user/v1/user.proto";

// =============================================================================
// Enums
// =============================================================================

enum AdminRole {
  ADMIN_ROLE_UNSPECIFIED = 0;
  ADMIN_ROLE_SUPER_ADMIN = 1;
  ADMIN_ROLE_GENIE = 2;          // Date coordinator
  ADMIN_ROLE_SUPPORT = 3;
  ADMIN_ROLE_MODERATOR = 4;
}

enum DateStatus {
  DATE_STATUS_UNSPECIFIED = 0;
  DATE_STATUS_SCHEDULED = 1;
  DATE_STATUS_CONFIRMED = 2;
  DATE_STATUS_IN_PROGRESS = 3;
  DATE_STATUS_COMPLETED = 4;
  DATE_STATUS_CANCELLED = 5;
  DATE_STATUS_NO_SHOW = 6;
}

enum CuratedMatchAction {
  CURATED_MATCH_ACTION_UNSPECIFIED = 0;
  CURATED_MATCH_ACTION_ACCEPT = 1;      // Admin accepts the match
  CURATED_MATCH_ACTION_REJECT = 2;      // Admin rejects the match
  CURATED_MATCH_ACTION_REVIEW_LATER = 3; // Admin will review later
}

enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_ASC = 1;
  SORT_ORDER_DESC = 2;
}

enum UserSortField {
  USER_SORT_FIELD_UNSPECIFIED = 0;
  USER_SORT_FIELD_CREATED_AT = 1;
  USER_SORT_FIELD_NAME = 2;
  USER_SORT_FIELD_EMAIL = 3;
  USER_SORT_FIELD_LAST_LOGIN = 4;
  USER_SORT_FIELD_AGE = 5;
}

// =============================================================================
// Admin User Messages
// =============================================================================

message AdminUser {
  string admin_id = 1;
  string user_id = 2;
  string email = 3;
  string name = 4;
  AdminRole role = 5;
  bool is_genie = 6;
  common.v1.Timestamp created_at = 7;
  common.v1.Timestamp last_login_at = 8;
}

message AdminTokenPair {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

// =============================================================================
// Date/Match Messages
// =============================================================================

message ScheduledDate {
  string date_id = 1;
  string user1_id = 2;
  string user2_id = 3;
  UserSummary user1 = 4;
  UserSummary user2 = 5;
  string genie_id = 6;
  AdminUser genie = 7;
  common.v1.Timestamp scheduled_time = 8;
  int64 duration_minutes = 9;
  DateStatus status = 10;
  string date_type = 11;           // online, offline, event
  OfflineLocation location = 12;
  string notes = 13;
  common.v1.Timestamp created_at = 14;
  common.v1.Timestamp updated_at = 15;
}

message UserSummary {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string photo_url = 5;
  int32 age = 6;
  string gender = 7;
  string city = 8;
  string occupation = 9;
}

message OfflineLocation {
  string place_name = 1;
  string address = 2;
  string city = 3;
  string state = 4;
  string country = 5;
  string zipcode = 6;
  double latitude = 7;
  double longitude = 8;
}

message DateSuggestion {
  UserSummary user = 1;
  double compatibility_score = 2;
  repeated string common_interests = 3;
  string suggested_date_type = 4;
  repeated AvailableSlot matching_slots = 5;
}

message AvailableSlot {
  common.v1.Timestamp start_time = 1;
  common.v1.Timestamp end_time = 2;
  string date_type = 3;
}

// =============================================================================
// Request/Response Messages
// =============================================================================

// Admin Login
message AdminLoginRequest {
  string email = 1;
  string password = 2;
}

message AdminLoginResponse {
  AdminUser admin = 1;
  AdminTokenPair tokens = 2;
}

// Get All Users
message GetAllUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  UserSortField sort_by = 3;
  SortOrder sort_order = 4;
  string account_status_filter = 5;
  string gender_filter = 6;
}

message GetAllUsersResponse {
  repeated UserFullDetails users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
  int32 total_pages = 5;
}

message UserFullDetails {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string phone = 4;
  string photo_url = 5;
  common.v1.Timestamp date_of_birth = 6;
  int32 age = 7;
  string gender = 8;
  string account_status = 9;
  bool email_verified = 10;
  bool phone_verified = 11;
  common.v1.Timestamp created_at = 12;
  common.v1.Timestamp last_login_at = 13;
  user.v1.UserProfile profile = 14;
  user.v1.PartnerPreferences partner_preferences = 15;
  int32 photo_count = 16;
  int32 availability_count = 17;
}

// Search Users
message SearchUsersRequest {
  string query = 1;
  int32 page = 2;
  int32 page_size = 3;
  repeated string search_fields = 4;  // name, email, phone, city
}

message SearchUsersResponse {
  repeated UserFullDetails users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Get User Details
message GetUserDetailsRequest {
  string user_id = 1;
}

message GetUserDetailsResponse {
  UserFullDetails user = 1;
  repeated AvailableSlot availability = 2;
  repeated ScheduledDate past_dates = 3;
  repeated ScheduledDate upcoming_dates = 4;
}

// Get Date Suggestions (Opposite Sex)
message GetDateSuggestionsRequest {
  string user_id = 1;
  int32 limit = 2;
}

message GetDateSuggestionsResponse {
  repeated DateSuggestion suggestions = 1;
}

// Schedule Date
message ScheduleDateRequest {
  string user1_id = 1;
  string user2_id = 2;
  common.v1.Timestamp scheduled_time = 3;
  int64 duration_minutes = 4;
  string date_type = 5;
  OfflineLocation location = 6;
  string notes = 7;
}

message ScheduleDateResponse {
  ScheduledDate date = 1;
}

// Get Curation Candidates (Users available for dates tomorrow)
message GetCurationCandidatesRequest {
  // Empty - returns all users available tomorrow
}

message CurationCandidate {
  string user_id = 1;
  string email = 2;
  string name = 3;
  int32 age = 4;
  string gender = 5;
  int32 profile_completion = 6;
  bool email_verified = 7;
  bool aadhar_verified = 8;
  bool work_email_verified = 9;
  int32 available_slots_count = 10;
  common.v1.Timestamp next_available_date = 11;
}

message GetCurationCandidatesResponse {
  repeated CurationCandidate candidates = 1;
}

// Curate Dates (AI-powered compatibility matching)
message CurateDatesRequest {
  string user_id = 1;              // User to find matches for
  repeated string candidate_ids = 2; // Candidate user IDs to analyze
}

message MatchResult {
  string user_id = 1;
  string name = 2;
  int32 age = 3;
  string gender = 4;
  double compatibility_score = 5;    // 0-100
  bool is_match = 6;                 // true if score >= 60
  string reasoning = 7;
  repeated string matched_aspects = 8;
  repeated string mismatched_aspects = 9;
}

message CurateDatesResponse {
  repeated MatchResult matches = 1;
}

// Update Curated Match Action (Admin accept/reject/review-later)
message UpdateCuratedMatchActionRequest {
  int32 curated_match_id = 1;        // ID of the curated match
  CuratedMatchAction action = 2;     // Action to take
  string notes = 3;                   // Optional notes
}

message UpdateCuratedMatchActionResponse {
  bool success = 1;
  string message = 2;
  string new_status = 3;              // The new status after action
}

// Get Genie Dates (Dates assigned to admin)
message GetGenieDatesRequest {
  string genie_id = 1;
  DateStatus status_filter = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetGenieDatesResponse {
  repeated ScheduledDate dates = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Update Date Status
message UpdateDateStatusRequest {
  string date_id = 1;
  DateStatus status = 2;
  string notes = 3;
}

message UpdateDateStatusResponse {
  ScheduledDate date = 1;
}

// Create Admin User
message CreateAdminUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  AdminRole role = 4;
  bool is_genie = 5;
}

message CreateAdminUserResponse {
  AdminUser admin = 1;
}

// Get All Admins
message GetAllAdminsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message GetAllAdminsResponse {
  repeated AdminUser admins = 1;
  int32 total_count = 2;
}

// Update Admin
message UpdateAdminRequest {
  string admin_id = 1;
  string name = 2;
  string email = 3;
  AdminRole role = 4;
}

message UpdateAdminResponse {
  AdminUser admin = 1;
}

// Delete Admin
message DeleteAdminRequest {
  string admin_id = 1;
}

message DeleteAdminResponse {
  bool success = 1;
}

// Update Admin Profile
message UpdateAdminProfileRequest {
  string admin_id = 1;
  string name = 2;
  string email = 3;
}

message UpdateAdminProfileResponse {
  AdminUser admin = 1;
}

// Bulk User Actions
enum BulkUserAction {
  BULK_USER_ACTION_UNSPECIFIED = 0;
  BULK_USER_ACTION_ACTIVATE = 1;
  BULK_USER_ACTION_SUSPEND = 2;
  BULK_USER_ACTION_DELETE = 3;
  BULK_USER_ACTION_VERIFY = 4;
  BULK_USER_ACTION_UNVERIFY = 5;
}

message BulkUserActionRequest {
  repeated string user_ids = 1;
  BulkUserAction action = 2;
  string reason = 3;
}

message BulkUserActionResponse {
  int32 success_count = 1;
  int32 failed_count = 2;
  repeated string failed_user_ids = 3;
  repeated string error_messages = 4;
}

// Analytics Messages
message TimeRange {
  common.v1.Timestamp start_time = 1;
  common.v1.Timestamp end_time = 2;
}

enum AnalyticsPeriod {
  ANALYTICS_PERIOD_UNSPECIFIED = 0;
  ANALYTICS_PERIOD_DAILY = 1;
  ANALYTICS_PERIOD_WEEKLY = 2;
  ANALYTICS_PERIOD_MONTHLY = 3;
  ANALYTICS_PERIOD_YEARLY = 4;
}

message DataPoint {
  string label = 1;       // e.g., "Jan", "Mon", "2024-01-01"
  int64 value = 2;
  common.v1.Timestamp timestamp = 3;
}

message UserGrowthRequest {
  AnalyticsPeriod period = 1;
  TimeRange time_range = 2;
}

message UserGrowthResponse {
  repeated DataPoint data_points = 1;
  int64 total_users = 2;
  double growth_rate = 3;
}

message ActiveUsersRequest {
  AnalyticsPeriod period = 1;
  TimeRange time_range = 2;
}

message ActiveUsersResponse {
  repeated DataPoint data_points = 1;
  int64 current_active = 2;
  double activity_rate = 3;
}

message SignupsRequest {
  AnalyticsPeriod period = 1;
  TimeRange time_range = 2;
}

message SignupsResponse {
  repeated DataPoint data_points = 1;
  int64 total_signups = 2;
}

message DemographicsRequest {
  string metric_type = 1;  // gender, age_group, location
}

message DemographicsResponse {
  repeated DemographicData data = 1;
}

message DemographicData {
  string category = 1;
  int64 count = 2;
  double percentage = 3;
}

message LocationStatsRequest {
  string level = 1;  // country, state, city
  string parent_location = 2;  // Filter by parent (e.g., country for state stats)
}

message LocationStatsResponse {
  repeated LocationData locations = 1;
}

message LocationData {
  string location_name = 1;
  string location_code = 2;  // ISO code
  int64 user_count = 3;
  double percentage = 4;
}

message AvailabilityStatsRequest {}

message AvailabilityStatsResponse {
  int64 available_users = 1;
  int64 unavailable_users = 2;
  double availability_rate = 3;
}

message PlatformStatsRequest {}

message PlatformStatsResponse {
  int64 total_users = 1;
  int64 active_users = 2;
  int64 verified_users = 3;
  int64 available_for_dating = 4;
  int64 total_dates_scheduled = 5;
  int64 total_dates_completed = 6;
  int64 today_signups = 7;
  int64 this_week_signups = 8;
  int64 this_month_signups = 9;
}

// =============================================================================
// Admin Service
// =============================================================================

service AdminService {
  // Authentication
  rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse);

  // User Management
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
  rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse);
  rpc BulkUserAction(BulkUserActionRequest) returns (BulkUserActionResponse);

  // Date Matching
  rpc GetDateSuggestions(GetDateSuggestionsRequest) returns (GetDateSuggestionsResponse);
  rpc ScheduleDate(ScheduleDateRequest) returns (ScheduleDateResponse);

  // AI-Powered Date Curation
  rpc GetCurationCandidates(GetCurationCandidatesRequest) returns (GetCurationCandidatesResponse);
  rpc CurateDates(CurateDatesRequest) returns (CurateDatesResponse);
  rpc UpdateCuratedMatchAction(UpdateCuratedMatchActionRequest) returns (UpdateCuratedMatchActionResponse);

  // Genie Operations
  rpc GetGenieDates(GetGenieDatesRequest) returns (GetGenieDatesResponse);
  rpc UpdateDateStatus(UpdateDateStatusRequest) returns (UpdateDateStatusResponse);

  // Admin User Management (Super Admin only)
  rpc CreateAdminUser(CreateAdminUserRequest) returns (CreateAdminUserResponse);
  rpc GetAllAdmins(GetAllAdminsRequest) returns (GetAllAdminsResponse);
  rpc UpdateAdmin(UpdateAdminRequest) returns (UpdateAdminResponse);
  rpc DeleteAdmin(DeleteAdminRequest) returns (DeleteAdminResponse);
  rpc UpdateAdminProfile(UpdateAdminProfileRequest) returns (UpdateAdminProfileResponse);

  // Analytics
  rpc GetPlatformStats(PlatformStatsRequest) returns (PlatformStatsResponse);
  rpc GetUserGrowth(UserGrowthRequest) returns (UserGrowthResponse);
  rpc GetActiveUsers(ActiveUsersRequest) returns (ActiveUsersResponse);
  rpc GetSignups(SignupsRequest) returns (SignupsResponse);
  rpc GetDemographics(DemographicsRequest) returns (DemographicsResponse);
  rpc GetLocationStats(LocationStatsRequest) returns (LocationStatsResponse);
  rpc GetAvailabilityStats(AvailabilityStatsRequest) returns (AvailabilityStatsResponse);
}
